--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -61,7 +61,10 @@
   border-radius: 4px;
   color: #ECF0F1;
   display: block;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: 100%;
+  position: fixed;
+  z-index: 1; }
 
 .topNav > ul > li > p {
   color: #ECF0F1;
@@ -273,10 +276,10 @@
   padding-left: 20px; }
 
 .contentHeaderSeparator {
-  width: 80%;
+  width: 99.7%;
   background-color: #27AE60;
   border-radius: 7px;
-  border: 1px solid #BDC3C7;
+  border: 1px solid #27AE60;
   margin: 25px auto auto auto; }
 
 .contentHeaderSeparator > h3 {
@@ -444,19 +447,95 @@
   overflow: auto;
   float: left; }
 
+.beliefIndex {
+  position: relative;
+  display: inline-block;
+  padding-bottom: 10px; }
+  .beliefIndex .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: #2C3E50;
+    color: #ECF0F1;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    bottom: 0%;
+    right: 110%;
+    margin-left: -100px; }
+
+.beliefIndex:hover .tooltiptext {
+  visibility: visible; }
+
+.sourceIndex {
+  position: relative;
+  display: inline-block;
+  padding-left: 10px;
+  padding-bottom: 10px; }
+  .sourceIndex .tooltiptext {
+    visibility: hidden;
+    width: 200px;
+    background-color: #2C3E50;
+    color: #ECF0F1;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    /* Position the tooltip */
+    position: absolute;
+    bottom: 0%;
+    left: 110%;
+    margin-right: -100px; }
+
+.sourceIndex:hover .tooltiptext {
+  visibility: visible; }
+
+.testDiv #tooltip {
+  text-align: center;
+  color: #fff;
+  background: #111;
+  position: absolute;
+  padding: 15px; }
+
+.testDiv #tooltip:after {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #111;
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  margin-left: -10px; }
+
+.testDiv #tooltip.top:after {
+  border-top-color: transparent;
+  border-bottom: 10px solid #111;
+  top: -20px;
+  bottom: auto; }
+
+.testDiv #tooltip.left:after {
+  left: 10px;
+  margin: 0; }
+
+.testDiv #tooltip.right:after {
+  right: 10px;
+  left: auto;
+  margin: 0; }
+
 .contentCard {
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #BDC3C7;
   margin: 0 auto 15px auto;
-  width: 80%; }
+  width: 99.7%; }
 
 .contentExtensionCard {
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #27AE60;
   margin: 0 auto 15px auto;
-  width: 80%; }
+  width: 100%; }
 
 .cardPhoto img {
   max-width: 100%;
@@ -469,9 +548,11 @@
   padding-left: 20px;
   padding-right: 20px; }
 
+.influenceSection {
+  padding-bottom: 5px; }
+
 .elevationSection {
   position: relative;
-  padding-right: 10px;
   display: inline-block; }
 
 .elevationSection .tooltiptext {
@@ -484,27 +565,25 @@
   padding: 5px 0;
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px; }
 
 .elevationIcon {
-  display: inline-block; }
+  display: inline-block;
+  color: #27AE60; }
 
 .elevationIcon:hover .tooltiptext {
   visibility: visible; }
 
 .elevationCounter {
-  display: inline-block;
-  padding-bottom: 10px; }
+  display: inline-block; }
 
 .beaconSection {
   position: relative;
   display: inline-block;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 3px; }
+  padding-right: 20px;
+  padding-left: 20px; }
 
 .beaconSection .tooltiptext {
   visibility: hidden;
@@ -516,7 +595,6 @@
   padding: 5px 0;
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px; }
@@ -527,7 +605,6 @@
 .extensionSection {
   position: relative;
   display: inline-block;
-  padding-left: 10px;
   padding-bottom: 3px; }
 
 .extensionSection .tooltiptext {
@@ -540,7 +617,6 @@
   padding: 5px 0;
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px; }
@@ -560,6 +636,23 @@
 .cardImg h4.underline {
   text-decoration: underline; }
 
+/* unvisited link */
+a:link {
+  color: #2C3E50;
+  text-decoration: none; }
+
+/* visited link */
+a:visited {
+  color: #2C3E50; }
+
+/* mouse over link */
+a:hover {
+  color: #27AE60; }
+
+/* selected link */
+a:active {
+  color: #27AE60; }
+
 .indexLink {
   padding: 8px 13px;
   font-family: "Open Sans", Arial, serif;
@@ -573,6 +666,25 @@
     background: #27AE60; }
     .indexLink:hover a {
       color: #ECF0F1; }
+
+.elevationSection a.iconLink {
+  font-family: "Open Sans", Arial, serif;
+  color: #27AE60;
+  display: inline-block; }
+  .elevationSection a.iconLink:hover {
+    color: #2ECC71; }
+
+.extensionSection a.iconLink {
+  font-family: "Open Sans", Arial, serif;
+  color: #27AE60;
+  display: inline-block; }
+  .extensionSection a.iconLink:hover {
+    color: #2ECC71; }
+
+a.excerptText {
+  color: #000000; }
+  a.excerptText:hover {
+    color: #2C3E50; }
 
 .extensionContent {
   text-align: left;
@@ -592,12 +704,14 @@
   width: 50%;
   height: 100%;
   font-family: "Open Sans", Arial, serif;
-  margin: 1.5% auto; }
+  margin: 71px auto; }
 
 #centerText {
-  margin: 5px auto;
-  width: 99%;
-  height: auto; }
+  margin: 0 auto 5px auto;
+  width: 80%;
+  height: auto;
+  border-radius: 7px;
+  background-color: #ECF0F1; }
 
 #centerTextContent {
   text-align: left;
@@ -782,23 +896,6 @@ p.verification {
 html {
   background-color: #ECF0F1; }
 
-/* unvisited link */
-a:link {
-  color: #202020;
-  text-decoration: none; }
-
-/* visited link */
-a:visited {
-  color: #202020; }
-
-/* mouse over link */
-a:hover {
-  color: #009900; }
-
-/* selected link */
-a:active {
-  color: #00CC33; }
-
 p.verify {
   color: #000000; }
 
@@ -885,36 +982,9 @@ th {
 .payment-errors {
   color: red; }
 
-#leftSide {
-  width: 21%;
-  height: auto;
-  margin: 0 auto;
-  top: 56.1px;
-  background-color: #BDC3C7;
-  position: fixed;
-  border-radius: 20px;
-  border: 1px solid #BDC3C7;
-  font-family: "Open Sans", Arial, serif;
-  left: 2em; }
-
-#rightSide {
-  width: 21%;
-  height: auto;
-  margin: 0 auto;
-  top: 56.1px;
-  background-color: #BDC3C7;
-  position: fixed;
-  border-radius: 20px;
-  border: 1px solid #BDC3C7;
-  font-family: "Open Sans", Arial, serif;
-  right: 2em; }
-
 article {
-  opacity: 0.97;
-  border: 2px solid;
-  border-radius: 12px;
-  background: -webkit-linear-gradient(#F8F8F8, #C0C0C0);
-  background: linear-gradient(#F8F8F8, #C0C0C0); }
+  background-color: #ECF0F1;
+  border-radius: 7px; }
 
 #centerMenu {
   margin: 0 auto;
@@ -1105,14 +1175,14 @@ article {
     text-decoration: none; } }
 
 @media screen and (min-width: 801px) and (max-width: 1500px) and (max-height: 1400px) {
-  .topNav {
-    width: 100%; }
   .interactButton {
     font-size: 100%; }
   .createTitleText {
     max-width: 40%; }
   .navButton {
     font-size: 100%; }
+  #centerContent {
+    width: 65%; }
   #centerTextContent {
     max-height: 300px;
     padding-left: 15px;
@@ -1144,11 +1214,8 @@ article {
     padding: 12px 24px; } }
 
 @media screen and (max-width: 800px) and (min-height: 600px) {
-  .topNav {
-    max-width: 100%; }
   #centerContent {
-    width: 97%;
-    height: 85%; }
+    width: 95%; }
   #centerTextContent {
     max-height: 545px; }
   .createTitleText {
@@ -1180,11 +1247,8 @@ article {
     width: 70%; } }
 
 @media screen and (min-width: 852px) and (max-width: 1500px) {
-  .topNav {
-    max-width: 100%; }
   #centerContent {
-    width: 50%;
-    height: 81%; }
+    width: 65%; }
   #centerTextContent {
     max-height: 385px; }
   .createTitleText {
@@ -1228,8 +1292,6 @@ article {
     padding: 0 24px; } }
 
 @media screen and (max-width: 419px) and (min-height: 541px) {
-  .topNav {
-    max-width: 100%; }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1248,9 +1310,7 @@ article {
     border: 2px solid;
     border-radius: 25px; }
   #centerContent {
-    width: 99%;
-    height: 84%;
-    margin: 1.5% auto; }
+    width: 95%; }
   #centerText {
     max-height: 355px; }
   #centerTextContent {
@@ -1301,8 +1361,6 @@ article {
     padding: 2px; } }
 
 @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px) {
-  .topNav {
-    max-width: 100%; }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1312,9 +1370,7 @@ article {
   .topNav > ul > li > div ul > li > a {
     padding: 7px 1px; }
   #centerContent {
-    width: 57%;
-    height: 95%;
-    margin: 1.5% auto; }
+    width: 65%; }
   .formDataContainer {
     width: 98%;
     height: auto;
@@ -1370,8 +1426,6 @@ article {
     width: 80%; } }
 
 @media screen and (max-width: 465px) and (max-height: 540px) {
-  .topNav {
-    max-width: 100%; }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1441,8 +1495,6 @@ article {
     padding: 2px; } }
 
 @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px) {
-  .topNav {
-    max-width: 100%; }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
