--- a/resources/assets/sass/nav/cardNav.scss
+++ b/resources/assets/sass/nav/cardNav.scss
@@ -4,7 +4,7 @@
   border-radius: 7px;
   border: 1px solid #BDC3C7;
   margin: 0 auto 15px auto;
-  width: 80%;
+  width: 99.7%;
 }
 
 .contentExtensionCard
@@ -13,7 +13,7 @@
   border-radius: 7px;
   border: 1px solid #27AE60;
   margin: 0 auto 15px auto;
-  width: 80%;
+  width: 100%;
 }
 
 .cardPhoto
@@ -32,9 +32,13 @@
   padding-right: 20px;
 }
 
+.influenceSection
+{
+  padding-bottom: 5px;
+}
+
 .elevationSection {
   position: relative;
-  padding-right: 10px;
   display: inline-block;
 }
 
@@ -49,7 +53,6 @@
 
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px;
@@ -58,6 +61,8 @@
 .elevationIcon
 {
   display: inline-block;
+  color: #27AE60;
+
 }
 .elevationIcon:hover .tooltiptext {
   visibility: visible;
@@ -66,16 +71,14 @@
 .elevationCounter
 {
   display: inline-block;
-  padding-bottom: 10px;
 }
 
 .beaconSection
 {
   position: relative;
   display: inline-block;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 3px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .beaconSection .tooltiptext {
   visibility: hidden;
@@ -88,7 +91,6 @@
 
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px;
@@ -100,7 +102,6 @@
 .extensionSection {
   position: relative;
   display: inline-block;
-  padding-left: 10px;
   padding-bottom: 3px;
 }
 
@@ -115,7 +116,6 @@
 
   /* Position the tooltip */
   position: absolute;
-  z-index: 1;
   bottom: 100%;
   left: 50%;
   margin-left: -100px;
