--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -40,10 +40,10 @@
 
 .contentHeaderSeparator
 {
-  width: 80%;
+  width: 99.7%;
   background-color: #27AE60;
   border-radius: 7px;
-  border: 1px solid #BDC3C7;
+  border: 1px solid #27AE60;
   margin: 25px auto auto auto;
 
 }
