--- a/resources/assets/sass/nav/topNav.scss
+++ b/resources/assets/sass/nav/topNav.scss
@@ -8,6 +8,9 @@
     color: #ECF0F1;
     display: block;
     margin: 0 auto;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
   }
 
   .topNav > ul > li > p
