--- a/resources/assets/sass/utility/flatThemeVars.scss
+++ b/resources/assets/sass/utility/flatThemeVars.scss
@@ -66,3 +66,6 @@ $topBackgroundColor: #202020;
 $bottomPosition: 1%;
 $bottomBackgroundColor: #ECF0F1;
 $sideMargin: 0;
+
+//Headers
+$h1Color: #2C3E50;
