--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -65,6 +65,17 @@
   max-height:100%;
 }
 
+p.test
+{
+  font-family: medium-content-serif-font,Georgia,Cambria,"Times New Roman",Times,serif;
+  letter-spacing: .01rem;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 21px;
+  line-height: 1.58;
+  letter-spacing: -.003em;
+}
+
 
 
 
