Added search design and beacon cards

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -795,7 +795,8 @@ a.excerptText {
 
 .back-to-top {
   margin: 0 auto;
-  text-decoration: none; }
+  text-decoration: none;
+  display: none; }
 
 .formDataContainer {
   width: 80%;
