--- a/resources/assets/sass/nav/links.scss
+++ b/resources/assets/sass/nav/links.scss
@@ -78,7 +78,6 @@ a.navLink
 
 .elevationSection a.iconLink
 {
-  font-family: "Open Sans", Arial, serif;
   color: #27AE60;
   //border: 1px solid #27AE60;
   display: inline-block;
@@ -92,7 +91,18 @@ a.navLink
 
 .extensionSection a.iconLink
 {
-  font-family: "Open Sans", Arial, serif;
+  color: #27AE60;
+  //border: 1px solid #27AE60;
+  display: inline-block;
+
+  &:hover
+  {
+    color: #2ECC71;
+
+  }
+}
+.beaconSection a.iconLink
+{
   color: #27AE60;
   //border: 1px solid #27AE60;
   display: inline-block;
