--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -30,7 +30,7 @@
   color: #ECF0F1;
   background-color: #27AE60; }
 
-.topNav > ul > .iconBackground {
+.topNav > ul > .searchIconBackground {
   display: inline-block;
   width: auto;
   list-style-type: none;
@@ -40,7 +40,24 @@
   -webkit-transition: all 0.2s;
   transition: all 0.2s; }
 
-.topNav > ul > .iconBackground:hover {
+.topNav > ul > .searchIconBackground:hover {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  color: #ECF0F1;
+  background-color: #202020; }
+
+.topNav > ul > .searchMobileIconBackground {
+  display: none;
+  width: auto;
+  list-style-type: none;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
+
+.topNav > ul > .searchMobileIconBackground:hover {
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -1356,6 +1373,10 @@ article {
 @media screen and (max-width: 800px) and (min-height: 600px) {
   #centerContent {
     width: 95%; }
+  .topNav > ul > .searchIconBackground {
+    display: none; }
+  .topNav > ul > .searchMobileIconBackground {
+    display: inline-block; }
   .createTitleText {
     max-width: 40%; }
   #createOptions {
@@ -1386,7 +1407,7 @@ article {
 
 @media screen and (min-width: 852px) and (max-width: 1500px) {
   #centerContent {
-    width: 65%; }
+    width: 75%; }
   .createTitleText {
     max-width: 45%; }
   #createOptions {
@@ -1447,8 +1468,10 @@ article {
     border-radius: 25px; }
   #centerContent {
     width: 95%; }
-  #centerText {
-    max-height: 355px; }
+  .topNav > ul > .searchIconBackground {
+    display: none; }
+  .topNav > ul > .searchMobileIconBackground {
+    display: inline-block; }
   #centerTextContent {
     padding-left: 3px;
     padding-right: 3px; }
@@ -1505,7 +1528,13 @@ article {
   .topNav > ul > li > div ul > li > a {
     padding: 7px 1px; }
   #centerContent {
-    width: 65%; }
+    width: 75%; }
+  #centerText {
+    width: 85%; }
+  .topNav > ul > .searchIconBackground {
+    display: none; }
+  .topNav > ul > .searchMobileIconBackground {
+    display: inline-block; }
   .formDataContainer {
     width: 98%;
     height: auto;
@@ -1515,8 +1544,6 @@ article {
     filter: alpha(opacity=90);
     border: 2px solid;
     border-radius: 25px; }
-  #centerText {
-    max-height: 270px; }
   #centerTextContent {
     padding-left: 3px;
     padding-right: 3px; }
@@ -1569,11 +1596,13 @@ article {
   .topNav > ul > li > div ul > li > a {
     padding: 7px 1px; }
   #centerContent {
-    width: 98%;
-    height: 84%;
-    margin: 1.5% auto; }
+    width: 99%; }
   #centerText {
-    max-height: 240px; }
+    width: 99%; }
+  .topNav > ul > .searchIconBackground {
+    display: none; }
+  .topNav > ul > .searchMobileIconBackground {
+    display: inline-block; }
   .createTitleText {
     max-width: 70%; }
   #centerTextContent {
@@ -1591,8 +1620,6 @@ article {
   #createBodyText {
     padding-left: 1px;
     padding-right: 1px; }
-  #createOptions {
-    max-height: 280px; }
   #leftSide {
     top: 80%;
     height: 20%;
@@ -1637,20 +1664,15 @@ article {
   .topNav > ul > li > div ul > li > a {
     padding: 7px 1px; }
   #centerContent {
-    width: 57%;
-    height: 85%;
-    margin: 1.5% auto; }
+    width: 85%; }
   #centerText {
-    max-height: 105px; }
+    width: 90%; }
   #centerTextContent {
-    max-height: 100px;
     padding-left: 3px;
     padding-right: 3px; }
   #createBodyText {
     padding-left: 1px;
     padding-right: 1px; }
-  #createOptions {
-    max-height: 210px; }
   #leftSide {
     top: 1%;
     height: auto;
