--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -119,6 +119,14 @@
     #centerContent {
       width: 95%;
     }
+    .topNav > ul > .searchIconBackground
+    {
+      display: none;
+    }
+    .topNav > ul > .searchMobileIconBackground
+    {
+      display: inline-block;
+    }
     .createTitleText {
       max-width: 40%;
     }
@@ -171,7 +179,7 @@
     }
 
     #centerContent {
-      width: 65%;
+      width: 75%;
     }
 
     .createTitleText {
@@ -268,10 +276,13 @@
     #centerContent {
       width: 95%;
     }
-
-    #centerText
+    .topNav > ul > .searchIconBackground
     {
-      max-height: 355px;
+      display: none;
+    }
+    .topNav > ul > .searchMobileIconBackground
+    {
+      display: inline-block;
     }
 
     #centerTextContent {
@@ -361,7 +372,19 @@
       padding: 7px 1px;
     }
     #centerContent {
-      width: 65%;
+      width: 75%;
+    }
+    #centerText
+    {
+      width: 85%;
+    }
+    .topNav > ul > .searchIconBackground
+    {
+      display: none;
+    }
+    .topNav > ul > .searchMobileIconBackground
+    {
+      display: inline-block;
     }
 
     .formDataContainer
@@ -374,11 +397,6 @@
       filter:alpha(opacity=90);
       border: 2px solid;
       border-radius: 25px;
-    }
-
-    #centerText
-    {
-      max-height: 270px;
     }
 
     #centerTextContent {
@@ -465,13 +483,19 @@
       padding: 7px 1px;
     }
     #centerContent {
-      width: 98%;
-      height: 84%;
-      margin: 1.5% auto;
+      width: 99%;
     }
     #centerText
     {
-      max-height: 240px;
+      width: 99%;
+    }
+    .topNav > ul > .searchIconBackground
+    {
+      display: none;
+    }
+    .topNav > ul > .searchMobileIconBackground
+    {
+      display: inline-block;
     }
     .createTitleText {
       max-width: 70%;
@@ -498,9 +522,7 @@
       padding-left: 1px;
       padding-right: 1px;
     }
-    #createOptions {
-      max-height: 280px;
-    }
+
     #leftSide {
       top: 80%;
       height: 20%;
@@ -573,16 +595,16 @@
       padding: 7px 1px;
     }
     #centerContent {
-      width: 57%;
-      height: 85%;
-      margin: 1.5% auto;
+      width: 85%;
     }
-    #centerText {
-      max-height: 105px;
+    #centerText
+    {
+      width: 90%;
     }
 
+
     #centerTextContent {
-      max-height: 100px;
+
       padding-left: 3px;
       padding-right: 3px;
     }
@@ -590,9 +612,7 @@
       padding-left: 1px;
       padding-right: 1px;
     }
-    #createOptions {
-      max-height: 210px;
-    }
+
 
     #leftSide {
       top: 1%;
