--- a/resources/assets/sass/utility/starThemeVars.scss
+++ b/resources/assets/sass/utility/starThemeVars.scss
@@ -22,7 +22,7 @@ $actTextColor:    #000000;
 $actTextHoverColor: #FFFFFF;
 
 //Content
-$centerBackgroundColor: #E8E8E8;
+$centerBackgroundColor: #ECF0F1;
 $centerOpacity: 0.97;
 $centerPosition: 5%;
 
