--- a/resources/assets/sass/nav/topNav.scss
+++ b/resources/assets/sass/nav/topNav.scss
@@ -111,17 +111,25 @@
     width: 165px;
     visibility: hidden;
     z-index: 100;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
     -webkit-transiton: opacity 0.2s;
     -moz-transition: opacity 0.2s;
     -ms-transition: opacity 0.2s;
     -o-transition: opacity 0.2s;
     -transition: opacity 0.2s;
   }
+
+
   .topNav > ul > li > div ul > li > a {
     color: $topNavDivColor;
     display: block;
     padding: 12px 24px;
     text-decoration: none;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
   }
   .topNav > ul > li > div ul > li:hover > a {
     background-color: $topNavDivHoverBackground;
@@ -189,10 +197,18 @@
     opacity: 1;
     visibility: visible;
   }
+  //Navigation for settings menu
+  .topNav > ul > li > div ul.navSettings
+  {
+    position: absolute;
+    left: -65px;
+    background-color: #BDC3C7;
+  }
 
   .topNav > ul > li > div ul > li {
     display: block;
   }
+
 }
 
 
