--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -64,17 +64,58 @@
   color: #ECF0F1;
   background-color: #202020; }
 
+.topNav > ul > .searchMobileIconBackground > a {
+  padding: 0 5px 0 5px; }
+
+.topNav > ul > .homeDesktopIcon {
+  display: inline-block;
+  width: auto;
+  list-style-type: none;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
+
+.topNav > ul > .homeDesktopIcon:hover {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  color: #ECF0F1;
+  background-color: #202020; }
+
+.topNav > ul > .homeMobileIcon {
+  display: none;
+  width: auto;
+  list-style-type: none;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s; }
+
+.topNav > ul > .homeMobileIcon > a {
+  margin: 0 5px 0 0;
+  padding: 0 3px 0 3px; }
+
+.topNav > ul > .homeMobileIcon:hover {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  color: #ECF0F1;
+  background-color: #202020; }
+
 .topNav > ul > li > p {
   color: #ECF0F1;
   display: block;
-  padding: 0 24px;
+  padding: 0 10px;
   text-decoration: none;
   font-weight: bold; }
 
 .topNav > ul > li > #pIcon {
   color: #ECF0F1;
   display: block;
-  padding: 0 12px;
+  padding: 0 8px;
   text-decoration: none;
   font-weight: bold; }
 
@@ -106,7 +147,7 @@
 .topNav > ul > li > div ul > li > a {
   color: #ECF0F1;
   display: block;
-  padding: 12px 24px;
+  padding: 10px 20px;
   text-decoration: none;
   border-radius: 4px;
   -moz-border-radius: 4px;
@@ -171,7 +212,9 @@
 .topNav > ul > li > div ul.navSettings {
   position: absolute;
   left: -65px;
-  background-color: #BDC3C7; }
+  background-color: #202020;
+  border-radius: 4px;
+  color: #ECF0F1; }
 
 .topNav > ul > li > div ul > li {
   display: block; }
@@ -1091,14 +1134,16 @@ p.verification {
     width: 85%;
     min-width: 250px; }
   .authCard {
-    width: 95%; } }
+    width: 85%; } }
 
 @media screen and (max-width: 465px) and (max-height: 540px) {
   #welcome {
-    width: 85%;
+    width: 99%;
     min-width: 250px; }
   .authCard {
-    width: 95%; } }
+    width: 99.9%; }
+  .formLabel {
+    width: 31%; } }
 
 @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px) {
   #welcome {
@@ -1206,12 +1251,14 @@ article {
 
 #centerTextContent > button {
   padding: 8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius: 7px;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   font-weight: 500;
   color: #FFFFFF;
+  outline: none;
   background-color: #27AE60;
   border: 1px solid #202020; }
 
@@ -1298,12 +1345,14 @@ article {
 /* Button specific */
 .navButton {
   padding: 8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius: 7px;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   font-weight: 500;
   color: #FFFFFF;
+  outline: none;
   background-color: #27AE60;
   border: 1px solid #202020; }
   .navButton:hover {
@@ -1313,6 +1362,7 @@ article {
 
 .interactButton {
   padding: 8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius: 7px;
   -moz-border-radius: 7px;
@@ -1331,6 +1381,7 @@ article {
 
 .interactButtonLeft {
   padding: 8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius: 7px;
   -moz-border-radius: 7px;
@@ -1350,6 +1401,7 @@ article {
 
 .indexButton {
   padding: 8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius: 7px;
   -moz-border-radius: 7px;
@@ -1539,6 +1591,10 @@ article {
     display: none; }
   .topNav > ul > .searchMobileIconBackground {
     display: inline-block; }
+  .topNav > ul > .homeDesktopIcon {
+    display: none; }
+  .topNav > ul > .homeMobileIcon {
+    display: inline-block; }
   #centerTextContent {
     padding-left: 3px;
     padding-right: 3px; }
@@ -1666,9 +1722,16 @@ article {
     width: 99%; }
   #centerText {
     width: 99%; }
+  /* Dropdown Content (Hidden by Default) */
+  .moreOptionsMenu {
+    left: -50px; }
   .topNav > ul > .searchIconBackground {
     display: none; }
   .topNav > ul > .searchMobileIconBackground {
+    display: inline-block; }
+  .topNav > ul > .homeDesktopIcon {
+    display: none; }
+  .topNav > ul > .homeMobileIcon {
     display: inline-block; }
   .createTitleText {
     max-width: 70%; }
@@ -1734,6 +1797,14 @@ article {
     width: 85%; }
   #centerText {
     width: 90%; }
+  .topNav > ul > .searchIconBackground {
+    display: inline-block; }
+  .topNav > ul > .searchMobileIconBackground {
+    display: none; }
+  .topNav > ul > .homeDesktopIcon {
+    display: inline-block; }
+  .topNav > ul > .homeMobileIcon {
+    display: none; }
   #centerTextContent {
     padding-left: 3px;
     padding-right: 3px; }
