--- a/resources/assets/sass/mixins/baseButton.scss
+++ b/resources/assets/sass/mixins/baseButton.scss
@@ -1,6 +1,7 @@
 @mixin baseButton
 {
   padding:8px 13px;
+  text-decoration: none;
   font-family: "Open Sans", Arial, serif;
   border-radius:7px;
   -moz-border-radius:7px;
