--- a/resources/assets/sass/nav/links.scss
+++ b/resources/assets/sass/nav/links.scss
@@ -49,19 +49,19 @@ a.navLink
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  color: #ECF0F1;
+  color:  #FFFFFF;;
   font-family: "Open Sans", Arial, serif;
   border-radius:7px;
   -moz-border-radius:7px;
   -webkit-border-radius:7px;
   border: 1px solid #2C3E50;
-  background-color:  #27AE60;
+  background-color: #2ECC71 ;
   font-weight: 500;
 
   &:hover
   {
-    background: #2ECC71;
-    color: #FFFFFF;
+    background: #27AE60;
+    color: #ECF0F1;
 
   }
 }
