--- a/resources/assets/sass/nav/topNav.scss
+++ b/resources/assets/sass/nav/topNav.scss
@@ -75,14 +75,14 @@
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     color: $topNavColor;
-    background-color: $topNavBackgroundColor;
+    background-color: $topNavHoverColor;
   }
   .topNav > ul > .searchMobileIconBackground > a
   {
     padding: 0 5px 0 5px;
   }
 
-  .topNav > ul > .homeDesktopIcon {
+  .topNav > ul > .navDesktopIcon {
     display: inline-block;
     width: auto;
     list-style-type: none;
@@ -95,14 +95,14 @@
     -o-transition: all 0.2s;
     transition: all 0.2s;
   }
-  .topNav > ul > .homeDesktopIcon:hover {
+  .topNav > ul > .navDesktopIcon:hover {
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     color: $topNavColor;
-    background-color: $topNavBackgroundColor;
+    background-color: $topNavHoverBackground;
   }
-  .topNav > ul > .homeMobileIcon
+  .topNav > ul > .navMobileIcon
   {
     display: none;
     width: auto;
@@ -116,17 +116,19 @@
     -o-transition: all 0.2s;
     transition: all 0.2s;
   }
-  .topNav > ul > .homeMobileIcon > a
-  {
-    margin: 0 5px 0 0;
-    padding: 0 3px 0 3px;
+  .topNav > ul > .navMobileIcon > a {
+    padding: 0 5px 0 5px;
   }
-  .topNav > ul > .homeMobileIcon:hover {
+  .topNav > ul > .navMobileIcon > p {
+    padding: 0 5px 0 5px;
+  }
+
+  .topNav > ul > .navMobileIcon:hover {
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     color: $topNavColor;
-    background-color: $topNavBackgroundColor;
+    background-color: $topNavHoverBackground;
   }
 
   .topNav > ul > li > p {
