--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -95,10 +95,10 @@
   transition: all 0.2s; }
 
 .topNav > ul > .navMobileIcon > a {
-  padding: 0 5px 0 5px; }
+  padding: 0 10px 0 10px; }
 
 .topNav > ul > .navMobileIcon > p {
-  padding: 0 5px 0 5px; }
+  padding: 0 10px 0 10px; }
 
 .topNav > ul > .navMobileIcon:hover {
   border-radius: 4px;
@@ -389,9 +389,9 @@
   color: #ECF0F1; }
 
 .sponsorContentLogo {
-  height: 40px;
+  height: 45px;
   margin: 0 auto;
-  width: 200px; }
+  width: 210px; }
 
 .sponsorContentLogo img {
   max-width: 100%;
@@ -781,6 +781,9 @@ hr.contentSeparator {
   height: 5px;
   border-radius: 7px;
   margin: 25px auto auto auto; }
+
+.contentHandle {
+  font-weight: 500; }
 
 .linkContainer {
   padding: 10px; }
@@ -1764,20 +1767,6 @@ article {
   #createBodyText {
     padding-left: 1px;
     padding-right: 1px; }
-  #leftSide {
-    top: 80%;
-    height: 20%;
-    width: 45%;
-    visibility: visible;
-    left: .01em;
-    font-size: 0%; }
-  #rightSide {
-    top: 80%;
-    height: 20%;
-    width: 45%;
-    visibility: visible;
-    right: .01em;
-    font-size: 0%; }
   .infoNav > ul > li {
     width: 100%; }
   .innerProfileMenus {
@@ -1809,7 +1798,7 @@ article {
     left: 85%; }
   .sourceIndex .tooltiptext {
     bottom: 120%;
-    right: 1%; } }
+    left: -60%; } }
 
 @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px) {
   .topNav > ul > li > div {
@@ -1822,9 +1811,9 @@ article {
     width: 90%; }
   .topNav > ul > .searchIconBackground {
     display: inline-block;
-    width: 105px; }
+    width: 109px; }
   .searchField {
-    width: 55px; }
+    width: 53px; }
   .topNav > ul > .searchMobileIconBackground {
     display: none; }
   .topNav > ul > .navDesktopIcon {
